bugfix: word-wrap for long text in links and codes

--- a/docs/.vuepress/styles/custom.styl
+++ b/docs/.vuepress/styles/custom.styl
@@ -34,11 +34,11 @@ p {
     margin-inline-end: 0px;
 }
 
-a {
-    white-space: pre-wrap;
+code, a {
+    // white-space: pre-wrap;
     word-wrap: break-word;
-    word-break: break-all;
-    white-space: normal;
+    // word-break: break-all;
+    // white-space: normal;
  }
 
 @media print {
